# example-hooks-lifegame

./: .gitignore  README.md  package.json  tsconfig.json
.netlify/: state.json
rust-life/: Cargo.toml
rust-life/src/: game.rs  lib.rs
src/: Cell.tsx  CellItem.tsx  LinerGradient.tsx  Position.tsx  chunk.tsx  index.tsx  initialArray.tsx  preText.ts  useCell.tsx  useCellMap.tsx  useTimerEffect.tsx
