[package]
name = "rust_life"
version = "0.1.0"
authors = ["terrierscript <13282103+terrierscript@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.50"
js-sys = "0.3.27"
rand = "0.7.0"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
features = [
  "console",
]